--- a/html/services.html
+++ b/html/services.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="/formatting/service.css">
 </head>
 <body>
+    <div class="webservices_wrapper">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nihil delectus, provident odit culpa accusamus adipisci voluptatibus qui commodi. Reprehenderit, aliquam vitae saepe numquam alias quasi fuga similique consequuntur aut!
+        Dicta ipsa totam quae accusantium eos, explicabo inventore in maxime consequuntur rem dolore perspiciatis vel ipsum fuga molestiae, unde, eveniet quibusdam eligendi laborum at hic itaque quidem omnis esse. Odio.
+        Blanditiis sapiente placeat nostrum eum autem error, dolor tempora, iusto vel omnis quidem, ad similique impedit perspiciatis pariatur reprehenderit? Dolore officia facilis, nihil deserunt a repudiandae quidem sequi. Labore, nam!</p>
+    </div>
+    
     <h1 style="color: red; text-align: center;">Services</h1>
     <h3 style="color: red; text-align: center;">This page comming soon!</h3>
 
