--- a/index.html
+++ b/index.html
@@ -32,35 +32,17 @@
                 <h3 id="webnameh3_wrapper">Israr Glass Works</h3>
             </div>
             <ul class="webnavlink_wrapper">
-                <li><a href="#!/" class="webnavlinkactive_wrapper">HOME</a></li>
-                <li><a href="#!products" id="prod">PRODUCTS</a></li>
-                <li><a href="#!services" id="serv">SERVICES</a></li>
-                <li><a href="#!about" id="about">ABOUT</a></li>
-                <li><a href="#!contact" id="cont">CONTACT</a></li>
+                <li><a href="#!/" class="webnavlinkactive_wrapper" onclick="homeLink()" id="home" onmouseover="hoverEffect(id)" onmouseleave="leaveEffect(id)">HOME</a></li>
+                <li><a href="#!products" onclick="productsLink()" id="products" onmouseover="hoverEffect(id)" onmouseleave="leaveEffect(id)">PRODUCTS</a></li>
+                <li><a href="#!services" onclick="servicesLink()" id="services" onmouseover="hoverEffect(id)" onmouseleave="leaveEffect(id)">SERVICES</a></li>
+                <li><a href="#!about" onclick="aboutLink()" id="about" onmouseover="hoverEffect(id)" onmouseleave="leaveEffect(id)">ABOUT</a></li>
+                <li><a href="#!contact" onclick="contactLink()" id="contact" onmouseover="hoverEffect(id)" onmouseleave="leaveEffect(id)">CONTACT</a></li>
             </ul>
 
             <div class="weblogin_wrapper" id="weblogin_wrapper">
                 <button type="button" id="webloginbtn_wrapper">LOGIN</button>
                 <button type="button" id="websignupbtn_wrapper">SIGNUP</button>
             </div>
-        </div>
-
-        <div class="webhome_wrapper">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos eum pariatur saepe! Totam inventore cupiditate iure distinctio, repellendus dignissimos nemo, magni veritatis autem laudantium saepe. Omnis officia velit asperiores sint? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur culpa voluptatem nisi repellendus explicabo neque, consequuntur amet optio vero totam! In necessitatibus saepe nesciunt dolorum quas quasi est eaque pariatur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus perferendis tenetur voluptates! Quam deserunt et dolores ullam! Beatae iusto voluptates dolorum, odit sit officiis, dignissimos corrupti aliquid, adipisci dicta impedit.
-        Vero porro quibusdam commodi, rem sequi ipsam voluptatibus alias molestias. Facere doloribus, debitis sapiente suscipit officia culpa cupiditate, est corporis molestiae ipsa error illum hic dolorem blanditiis officiis rerum quae!
-        Voluptatem voluptas voluptatum laboriosam repudiandae ad aut dolor architecto soluta vero sunt, dolores, exercitationem dicta corrupti recusandae minus quae. Magni itaque saepe veniam impedit culpa possimus neque quae ab dolorem.
-        Nostrum inventore quos dolor cumque doloremque, veniam nisi molestiae accusantium eius nemo repudiandae placeat incidunt! Ipsam ratione iste dolorem molestias similique! Ipsa corporis distinctio facilis iusto eligendi fugit est dolores.
-        Recusandae necessitatibus libero, hic ipsa nostrum, voluptates ducimus odio eos quisquam officia esse, officiis ratione maiores architecto velit suscipit iusto sequi deserunt adipisci! Quisquam similique laboriosam excepturi amet explicabo suscipit.
-        Necessitatibus illo quam laborum. Inventore omnis accusamus vitae perspiciatis? Hic sit quia rerum cupiditate maxime unde suscipit eos, molestias nemo voluptatum fuga autem magni laborum vero eligendi debitis, accusamus animi.
-        Vel eaque sequi, aspernatur impedit dignissimos vitae dicta dolor odit mollitia voluptatibus minima quos laboriosam dolores soluta culpa esse id aperiam ipsum in fugiat qui! Distinctio, architecto veniam. Temporibus, minus?
-        Provident quibusdam corrupti deserunt quas. Iusto aliquid quaerat explicabo quod nemo. Ullam harum corporis voluptas officiis ex nulla voluptatem? Soluta veniam numquam quod porro architecto cupiditate quae consequatur, molestiae id.
-        Deleniti voluptatum, optio molestias, odio architecto illo illum consequuntur sapiente aut mollitia quia quas fugit repudiandae vitae libero eligendi. Laboriosam temporibus unde, error atque commodi omnis molestias dicta suscipit odio?
-        aque deleniti tenetur doloremque dignissimos quidem obcaecati? Nobis magnam et, praesentium cum eum doloribus reiciendis rerum, omnis iste libero veritatis ut! Suscipit doloribus excepturi earum sed consequuntur animi ipsam.
-        tatis at asperiores. Possimus, quasi asperiores mollitia voluptate accusantium culpa eveniet facere nesciunt architecto. Exercitationem incidunt possimus non quisquam. Maiores molestias assumenda minus magnam rerum non incidunt?
-        Veniam ratione mlestias itaque ipsum nemo explicabo optio, minus laboriosam dolorum, reiciendis similique perspiciatis iste possimus totam aspernatur sed voluptas? Maiores officia harum explicabo culpa voluptas illo itaque minima ut!
-        Id vitae fugit maiores provident dolore perferendis obcaecati inventore sunt explicabo modi, ipsam distinctio dolorem quae earum ad nobis. Illo impedit molestias dolorem minima facere, aspernatur aliquam eligendi temporibus consequatur!
-        Eos vel ullam exercitationem saepe, sunt consequatur aspernatur. Quidem voluptas hic distinctio unde. Cum earum similique assumenda culpa, reiciendis voluptatum et rerum facere nobis non necessitatibus corporis molestias dolorum excepturi.
-        s tenetur voluptates aspernatur animi eveniet totam voluptatibus adipisci explicabo et, similique natus excepturi doloribus ullam magni veritatis impedit iusto error nisi sint. Esse in quidem tenetur?
-        Fuga qui numquam hic similique. Doloremque nemo quis exercitationem, assumenda amet iusto. Iusto, odio, quas blanditiis libero amet alias numquam repellat optio, mollitia sed corrupti quae? Expedita temporibus commodi sint.
         </div>
 
         <div ng-view></div>
@@ -77,7 +59,7 @@
             <div class="webfootermiditem_wrapper">usama</div>
             <div class="webfootermiditem_wrapper">usama</div>
             <div class="webfootermiditem_wrapper">usama
-                <!-- <iframe src="" frameborder="0"></iframe> -->
+                <iframe width="150px" height="150px" src="https://maps.windows.com/?form=WNAMSH&entity=local_vdpid%3A7385536616699265025&collection=point.24.9002_67.044601_Liaquatabad" frameborder="0"></iframe>
             </div>
         </div>
         <div class="webfooterfoot_wrapper">
