--- a/html/home.html
+++ b/html/home.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/formatting/home.css">
 </head>
 <body>
+    <div class="webhome_wrapper">
+        
+    </div>
+
     <h1 style="color: red;">Home</h1>
 
     <script src="/js/home.js"></script>
